--- a/Wordreference/Wordreference/Wordreference.WindowsPhone/About.xaml
+++ b/Wordreference/Wordreference/Wordreference.WindowsPhone/About.xaml
@@ -6,8 +6,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:converters="using:Wordreference.Styles.Converters"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    DataContext="{Binding Source={StaticResource Locator}, Path=About}">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Page.Resources>
         <!-- Theme converters -->
